--- a/http_server/app/templates/user/puller.html
+++ b/http_server/app/templates/user/puller.html
@@ -207,38 +207,36 @@
 var map = null
 var list = []
 window.addEventListener("storage", function(e) {
-    var start_action = localStorage.getItem('startlive')
-    var stop_action = localStorage.getItem('stoplive')
-    if(start_action != null) {
-        var node_start_act = start_action.split('_')
-        console.log(node_start_act)
-        if(node_start_act[0] == "startlive") {
-            //localStorage.setItem('startlive', null)
-            //var target_url = node_start_act[1] + "_" + node_start_act[2] + "_" + "URL" + "_" + "rtmp://live.hkstv.hk.lxdns.com/live/hks"
-            //localStorage.setItem('target_url', target_url)
-            cmproxy.start_push_media(node_start_act[1], node_start_act[2], "90s", function(msg) {
-                console.log("start push media listener")
-                console.log(msg)
-                json_rpc = JSON.parse(msg)
-                var json_target_url_obj = {}
-                json_target_url_obj["target_id"] = node_start_act[1] + "_" + node_start_act[2]
-                json_target_url_obj["URL"] = json_rpc["result"]["url"]
-                console.log(json_target_url_obj)
-                //var target_url =  + "URL" + "_" + json_rpc["url"]
-                localStorage.setItem('target_url', JSON.stringify(json_target_url_obj))
-            })
+    console.log("key: " + e.key + "oldValue: "+ e.oldValue + "newValue: " + e.newValue)
+    if(e.key == 'startlive') {
+        var start_action = localStorage.getItem('startlive')
+        if(start_action != null) {
+            var node_start_act = start_action.split('_')
+            console.log(node_start_act)
+            if(node_start_act[0] == "startlive") {
+                cmproxy.start_push_media(node_start_act[1], node_start_act[2], "90s", function(msg) {
+                    console.log("start push media listener")
+                    console.log(msg)
+                    json_rpc = JSON.parse(msg)
+                    var json_target_url_obj = {}
+                    json_target_url_obj["target_id"] = node_start_act[1] + "_" + node_start_act[2]
+                    json_target_url_obj["URL"] = json_rpc["result"]["url"]
+                    console.log(json_target_url_obj)
+                    localStorage.setItem('target_url', JSON.stringify(json_target_url_obj))
+                })
+            }
         }
-    }
-
-    if(stop_action != null) {
-        var node_stop_act = stop_action.split('_')
-        console.log(node_stop_act)
-        if(node_stop_act[0] == "stoplive") {
-            cmproxy.stop_push_media(node_stop_act[1], node_stop_act[2], function(msg) {
-                console.log("stop push media listener")
-                console.log(msg)
-                //localStorage.setItem('stoplive', null)
-            })
+    } else if((e.key == 'stoplive') {
+        var stop_action = localStorage.getItem('stoplive')
+        if(stop_action != null) {
+            var node_stop_act = stop_action.split('_')
+            console.log(node_stop_act)
+            if(node_stop_act[0] == "stoplive") {
+                cmproxy.stop_push_media(node_stop_act[1], node_stop_act[2], function(msg) {
+                    console.log("stop push media listener")
+                    console.log(msg)
+                })
+            }
         }
     }
 })
@@ -382,5 +380,4 @@ function openInfo(content,e) {
     var infoWindow = new BMap.InfoWindow(content,opts)
     map.openInfoWindow(infoWindow,point)
 }
-
 </script>
