--- a/http_server/app/templates/user/player.html
+++ b/http_server/app/templates/user/player.html
@@ -56,7 +56,6 @@
 	body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
 	#allmap{width:100%;height:500px;}
 	p{margin-left:5px; font-size:14px;}
-
     </style>
     <script type="text/javascript"
             src="http://api.map.baidu.com/api?v=2.0&ak=SBMwGhsPVie6UHSO6GnjN4VKpdjThHyG"></script>
@@ -101,7 +100,8 @@
                 </div>
                 <div class="row">
                     <div style="position:relative;" class="col-sm-6">
-                        <div class="prism-player" id="J_prismPlayer"></div>
+                        <div style="width:100%;height:500px;background:#000;border:1px solid #888888"
+                             class="prism-player" id="J_prismPlayer"></div>
                         <br>
                         <center>
                             <div class="col-sm-6">
@@ -190,14 +190,12 @@ var target_node = null
 $(document).ready(function() {
     getTime();
     createBaiduMap();
-    player = createPlayer(null);
+    //player = createPlayer(null);
 })
 
 window.addEventListener("storage", function(e) {
     var target_url = localStorage.getItem('target_url')
     var json_target_url_obj = JSON.parse(target_url)
-    //var node_url = target_url.split('_')
-    //var target_id = node_url[0] + "_" + node_url[1]
     console.log(json_target_url_obj)
     if(json_target_url_obj["target_id"] == target_node) {
         startlive(json_target_url_obj["URL"])
@@ -242,7 +240,6 @@ function getTime() {
 
 function startlive(url) {
     console.log(url)
-    player.dispose();
     player = createPlayer(url)
     player.on('ready',function(e) {
         console.log(e);
@@ -276,22 +273,11 @@ function stoplive_action(target) {
 function createPlayer(source) {
     return new Aliplayer({
     id: "J_prismPlayer",
-         autoplay: false,
          isLive:true,
-         playsinline:true,
          width:"100%",
          height:"500px",
-         controlBarVisibility:"always",
-         useH5Prism:false,
-         useFlashPrism:false,
-         source:source,
-         cover:"",
-         skinLayout:[
-                {"name":"controlBar","align":"blabs","x":0,"y":0,"children":[{"name":"progress","align":"blabs","x":0,"y":44},
-                {"name":"fullScreenButton","align":"tr","x":10,"y":12},
-                {"name":"timeDisplay","align":"tl","x":10,"y":7},
-                {"name":"volume","align":"tr","x":5,"y":10},
-                {"name":"playButton","align":"tl","x":15,"y":12}]}]
+         useFlashPrism:true,
+         source:source
          },function(player) {
             console.log("播放器创建了。");
          }
